add_library(matrix2_matrix INTERFACE matrix.h)
add_executable(matrix2_matrix_test matrix_test.cpp)
target_link_libraries(matrix2_matrix_test matrix2_matrix unit)

add_library(matrix2_dense INTERFACE dense.h)
add_executable(matrix2_dense_test dense_test.cpp)
target_link_libraries(matrix2_dense_test matrix2_dense unit)

add_library(matrix2_multiplication INTERFACE multiplication.h)
add_executable(matrix2_multiplication_test multiplication_test.cpp)
target_link_libraries(matrix2_multiplication_test matrix2_dense matrix2_multiplication unit)

add_library(matrix2_identity INTERFACE identity.h)
add_executable(matrix2_identity_test identity_test.cpp)
target_link_libraries(matrix2_identity_test matrix2_dense matrix2_identity unit)

add_library(matrix2_to_string INTERFACE to_string.h)
add_executable(matrix2_to_string_test to_string_test.cpp)
target_link_libraries(matrix2_to_string_test matrix2_dense matrix2_to_string unit)

add_library(matrix2_permutation INTERFACE permutation.h)
add_executable(matrix2_permutation_test permutation_test.cpp)
target_link_libraries(matrix2_permutation_test matrix2_dense matrix2_permutation unit)
